--- a/pom.xml
+++ b/pom.xml
@@ -17,9 +17,11 @@
         <java.version>11</java.version>
     </properties>
     <dependencies>
+        <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-starter-web -->
         <dependency>
             <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>2.7.1</version>
         </dependency>
 
         <dependency>
@@ -47,6 +49,13 @@
             <properties>
                 <maven.profiles.active>dev</maven.profiles.active>
             </properties>
+            <dependencies>
+                <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-devtools</artifactId>
+                </dependency>
+            </dependencies>
         </profile>
         <profile>
             <id>prod</id>
