Added DB config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -6,3 +6,9 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.h2.console.enabled=true
 # default path: h2-console
 spring.h2.console.path=/h2-ui
+# Create or update entities automatically if class model change
+spring.jpa.hibernate.ddl-auto=update
+# Show sql statements on terminal
+spring.jpa.properties.hibernate.show_sql=true
+# Show formatted sql statements on terminal
+spring.jpa.properties.hibernate.format_sql=true
