WIP: Custom PlaceResponse and deploy files

--- a/pom.xml
+++ b/pom.xml
@@ -46,12 +46,12 @@
 
     <profiles>
         <profile>
-            <id>dev</id>
+            <id>h2</id>
             <activation>
                 <activeByDefault>true</activeByDefault>
             </activation>
             <properties>
-                <maven.profiles.active>dev</maven.profiles.active>
+                <maven.profiles.active>h2,dev</maven.profiles.active>
             </properties>
             <dependencies>
                 <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
@@ -67,10 +67,37 @@
             </dependencies>
         </profile>
         <profile>
+            <id>devpostgres</id>
+            <properties>
+                <maven.profiles.active>postgres,dev</maven.profiles.active>
+            </properties>
+            <dependencies>
+                <!-- https://mvnrepository.com/artifact/org.springframework.boot/spring-boot-devtools -->
+                <dependency>
+                    <groupId>org.springframework.boot</groupId>
+                    <artifactId>spring-boot-devtools</artifactId>
+                </dependency>
+                <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
+        </profile>
+        <profile>
             <id>prod</id>
             <properties>
                 <maven.profiles.active>prod</maven.profiles.active>
             </properties>
+            <dependencies>
+                <!-- https://mvnrepository.com/artifact/org.postgresql/postgresql -->
+                <dependency>
+                    <groupId>org.postgresql</groupId>
+                    <artifactId>postgresql</artifactId>
+                    <scope>runtime</scope>
+                </dependency>
+            </dependencies>
         </profile>
     </profiles>
 
