--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,1 +1,32 @@
-server.port=8100
+# springdoc.api-docs.path=/openapi
+
+# Ocultar api-docs
+springdoc.api-docs.enabled=false
+
+# Ocultar swagger-ui
+springdoc.swagger-ui.enabled=false
+
+springdoc.swagger-ui.use-root-path: true
+# Mostrar los endpoints activos de actuator
+#springdoc.show-actuator=true
+
+# Salir en los endpoints de actuator
+management.endpoints.web.exposure.include=health
+
+#server.port=8000
+server.port=${PORT}
+
+# datasource
+# <database_type>://<username>:<password>@<hostname>:<database_port>/<database_name>
+# spring.datasource.url=postgres://gaby:hi@localhost:5444/safe
+spring.datasource.url=${DATABASE_URL}
+spring.datasource.driverClassName=org.postgresql.Driver
+spring.datasource.maxActive=10
+spring.datasource.maxIdle=5
+spring.datasource.minIdle=2
+spring.datasource.initialSize=5
+spring.datasource.removeAbandoned=true
+spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+
+#Hibernate ddl auto (create, update, validate...)
+spring.jpa.hibernate.ddl-auto=update
