Added CORS config

--- a/src/main/resources/application-dev.properties
+++ b/src/main/resources/application-dev.properties
@@ -1,6 +1,8 @@
 # Hibernate ddl auto (create, update, validate...)
 # Create or update entities automatically if class model change
 spring.jpa.hibernate.ddl-auto=update
+cors.allowedOrigins=*
+
 #---
 spring.config.activate.on-profile=h2
 spring.datasource.url=jdbc:h2:mem:devdb
