--- a/src/main/resources/application-prod.properties
+++ b/src/main/resources/application-prod.properties
@@ -1,4 +1,5 @@
 server.port=${PORT}
+cors.allowedOrigins=${ALLOWED_ORIGINS}
 
 # datasource
 # <database_type>://<username>:<password>@<hostname>:<database_port>/<database_name>
